[project]
name = "openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruba khan", email = "rubaahmedkhan786@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.9",
    "python-dotenv>=1.1.0",
]

[project.scripts]
openai-agents-sdk = "openai_agents_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
