[project]
name = "streaming-ai-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruba khan", email = "rubaahmedkhan786@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.11",
    "python-dotenv>=1.1.0",
]

[project.scripts]
streaming-ai-sdk = "streaming_ai_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
